<resources>
    <string name="app_name">Note Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="save">SAVE</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="title_activity_note">Note Keeper</string>
    <string name="title_view_note">Edit Note</string>
    <string name="text_view">Text View</string>
    <string name="title_view">Title View</string>
...
