package com.example.notekeeper;

import androidx.test.espresso.contrib.DrawerActions;
import androidx.test.espresso.contrib.NavigationViewActions;
import androidx.test.espresso.contrib.RecyclerViewActions;
import androidx.test.rule.ActivityTestRule;

import org.junit.Rule;
import org.junit.Test;

import java.util.List;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.not;
import static org.junit.Assert.*;

public class NextThroughNotesTest {
    @Rule
    public ActivityTestRule<HomeActivity> mActivityTestRule = new ActivityTestRule(HomeActivity.class);

    @Test
    public void NextThroughNotes(){
        onView(withId(R.id.drawer_layout)).perform(DrawerActions.open());
        onView(withId(R.id.nav_view)).perform(NavigationViewActions.navigateTo(R.id.nav_notes));

        onView(withId(R.id.list_items)).perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));
        List<NoteInfo> notes = DataManager.getInstance().getNotes();
        onView(withId(R.id.action_previous)).check(matches(not(isEnabled())));
        onView(withId(R.id.action_next)).check(matches(isEnabled()));

        for(int index = 0; index < notes.size(); index++)
        {
            NoteInfo note = notes.get(index);
            onView(withId(R.id.spinner_courses)).check(
                    matches(withSpinnerText(note.getCourse().getTitle()))
            );
            onView(withId(R.id.txt_NoteTitle)).check(
                    matches(withText(note.getTitle()))
            );
            onView(withId(R.id.txt_NoteDescription)).check(
                    matches(withText(note.getText()))
            );

            if(index < notes.size() - 1)
                onView(allOf(withId(R.id.action_next), isEnabled())).perform(click());

            onView(withId(R.id.action_previous)).check(matches(isEnabled()));
        }

        onView(withId(R.id.action_previous)).check(matches(isEnabled()));
        onView(withId(R.id.action_next)).check(matches(not(isEnabled())));
        pressBack();
    }
}